// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should detect mixed core messages and simple messages as valid messages 1`] = `
[AI_InvalidPromptError: Invalid prompt: message must be a CoreMessage or a UI message
Validation error: Type validation failed: Value: [{"role":"system","content":"System prompt","providerOptions":{"provider":"test"}},{"role":"user","content":"Hello"}].
Error message: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "code": "invalid_type",
            "expected": "object",
            "received": "string",
            "path": [
              0,
              "providerOptions",
              "provider"
            ],
            "message": "Expected object, received string"
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": "system",
            "code": "invalid_literal",
            "expected": "user",
            "path": [
              0,
              "role"
            ],
            "message": "Invalid literal value, expected \\"user\\""
          },
          {
            "code": "invalid_type",
            "expected": "object",
            "received": "string",
            "path": [
              0,
              "providerOptions",
              "provider"
            ],
            "message": "Expected object, received string"
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": "system",
            "code": "invalid_literal",
            "expected": "assistant",
            "path": [
              0,
              "role"
            ],
            "message": "Invalid literal value, expected \\"assistant\\""
          },
          {
            "code": "invalid_type",
            "expected": "object",
            "received": "string",
            "path": [
              0,
              "providerOptions",
              "provider"
            ],
            "message": "Expected object, received string"
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": "system",
            "code": "invalid_literal",
            "expected": "tool",
            "path": [
              0,
              "role"
            ],
            "message": "Invalid literal value, expected \\"tool\\""
          },
          {
            "code": "invalid_type",
            "expected": "array",
            "received": "string",
            "path": [
              0,
              "content"
            ],
            "message": "Expected array, received string"
          },
          {
            "code": "invalid_type",
            "expected": "object",
            "received": "string",
            "path": [
              0,
              "providerOptions",
              "provider"
            ],
            "message": "Expected object, received string"
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      0
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`should throw InvalidPromptError when system message has parts 1`] = `
[AI_InvalidPromptError: Invalid prompt: message must be a CoreMessage or a UI message
Validation error: Type validation failed: Value: [{"role":"system","content":[{"type":"text","text":"test"}]}].
Error message: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "code": "invalid_type",
            "expected": "string",
            "received": "array",
            "path": [
              0,
              "content"
            ],
            "message": "Expected string, received array"
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": "system",
            "code": "invalid_literal",
            "expected": "user",
            "path": [
              0,
              "role"
            ],
            "message": "Invalid literal value, expected \\"user\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": "system",
            "code": "invalid_literal",
            "expected": "assistant",
            "path": [
              0,
              "role"
            ],
            "message": "Invalid literal value, expected \\"assistant\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": "system",
            "code": "invalid_literal",
            "expected": "tool",
            "path": [
              0,
              "role"
            ],
            "message": "Invalid literal value, expected \\"tool\\""
          },
          {
            "received": "text",
            "code": "invalid_literal",
            "expected": "tool-result",
            "path": [
              0,
              "content",
              0,
              "type"
            ],
            "message": "Invalid literal value, expected \\"tool-result\\""
          },
          {
            "code": "invalid_type",
            "expected": "string",
            "received": "undefined",
            "path": [
              0,
              "content",
              0,
              "toolCallId"
            ],
            "message": "Required"
          },
          {
            "code": "invalid_type",
            "expected": "string",
            "received": "undefined",
            "path": [
              0,
              "content",
              0,
              "toolName"
            ],
            "message": "Required"
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      0
    ],
    "message": "Invalid input"
  }
]]
`;
